Sculpt mode: Modifiers will bug out when you press undo (most obviously solidify and subsurf) #47604

Closed
opened 2016-02-27 19:16:52 +01:00 by Jade WhyDoYouNeedMyLastName · 4 comments

System Information
Windows 10 Pro 64-bit
NVIDIA GeForce GTX 660
Intel Core i7 4790

Blender Version
Broken: 2.77 5cec0e6 (I have noticed it since 2.76a)
Worked: 2.75a

Short description of error
(See image below for a better example)

While in sculpt mode, if you have modifiers like solidify and subsurf and you are sculpting, whenever you press undo, the mesh will freak out. The mesh will return to normal if you use the smooth brush or exit sculpt mode and go to edit mode.

Exact steps for others to reproduce the error

  1. Create a plane, subdivide it a few times and scale it up in edit mode.
  2. Add a Solidify modifier with some thickness (so its like a piece of thick cloth).
  3. Now enter sculpt mode and begin sculpting (sculpt, grab, inflate, clay, etc)
  4. Press undo (Ctrl+Z) and you should notice that the mesh behaves weirdly (usually it flattens out in the case of solidify).

Sculpt mode undo with modifiers test.blend

Blender sculpt undo.png

**System Information** Windows 10 Pro 64-bit NVIDIA GeForce GTX 660 Intel Core i7 4790 **Blender Version** Broken: 2.77 5cec0e6 (I have noticed it since 2.76a) Worked: 2.75a **Short description of error** (See image below for a better example) While in sculpt mode, if you have modifiers like solidify and subsurf and you are sculpting, whenever you press undo, the mesh will freak out. The mesh will return to normal if you use the smooth brush or exit sculpt mode and go to edit mode. **Exact steps for others to reproduce the error** 1. Create a plane, subdivide it a few times and scale it up in edit mode. 2. Add a Solidify modifier with some thickness (so its like a piece of thick cloth). 3. Now enter sculpt mode and begin sculpting (sculpt, grab, inflate, clay, etc) 4. Press undo (Ctrl+Z) and you should notice that the mesh behaves weirdly (usually it flattens out in the case of solidify). [Sculpt mode undo with modifiers test.blend](https://archive.blender.org/developer/F286059/Sculpt_mode_undo_with_modifiers_test.blend) ![Blender sculpt undo.png](https://archive.blender.org/developer/F286060/Blender_sculpt_undo.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jarmade

Added subscriber: @jarmade

This issue was referenced by ed22ab3ce8

This issue was referenced by ed22ab3ce8c8a62999881335b99233973e65f0f5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47604
No description provided.