Fix T47604: Sculpt + Modifier undo gives invalid normals